Added new component stv-variant-hpo and solve height-table bug

--- a/src/variant/stv-variant-effect.html
+++ b/src/variant/stv-variant-effect.html
@@ -11,6 +11,10 @@
             box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.2);
             overflow-y: hidden;
         }
+        
+        stv-table::shadow #list {
+            min-height: 200px;
+        }
 
         stv-table::shadow {
             font-size: 11px;
@@ -25,7 +29,7 @@
         }
     </style>
     <template>
-        <stv-table id="table" hidden$="{{isEmpty}}" on-rowclick="handleRowClick" enable-export></stv-table>
+        <stv-table id="table" hidden$="{{isEmpty}}" on-rowclick="handleRowClick" enable-export enable-paging></stv-table>
         <div hidden$="{{!isEmpty}}" style="padding:20px 50px;">
             No effect found.
         </div>
