--- a/src/variant/stv-variant-phenotype.html
+++ b/src/variant/stv-variant-phenotype.html
@@ -13,6 +13,10 @@
             overflow-y: hidden;
         }
 
+        stv-table::shadow #list {
+            min-height: 200px;
+        }
+
         stv-table::shadow {
             font-size: 11px;
         }
