--- a/src/file/stv-file-browser.html
+++ b/src/file/stv-file-browser.html
@@ -10,7 +10,7 @@
 
 <dom-module id="stv-file-browser">
     <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
-        :host {
+         :host {
             display: block;
             position: relative;
             box-sizing: border-box;
@@ -29,7 +29,6 @@
         #botbar {
             box-sizing: border-box;
             height: 30px;
-            line-height: 30px;
             padding: 0 7px;
             background-color: var(--light-secondary-color);
         }
@@ -40,6 +39,14 @@
 
         #botbar {
             border-top: 1px solid rgba(130, 130, 130, 0.4);
+        }
+
+        .quota-bar {
+            box-sizing: border-box;
+            height: 20px;
+            padding: 0 7px;
+            border-top: 1px solid rgba(130, 130, 130, 0.2);
+            color: var(--secondary-text-color);
         }
 
         #main {
@@ -58,7 +65,7 @@
             border-right: 1px solid rgba(130, 130, 130, 0.4);
         }
 
-        #mainmenu> .resizer {
+        #mainmenu>.resizer {
             width: 2px;
             height: 100%;
             position: absolute;
@@ -68,7 +75,7 @@
             display: none;
         }
 
-        #mainmenu:hover> .resizer {
+        #mainmenu:hover>.resizer {
             display: inherit;
             background-color: #E1E3E5;
             border-left: 1px solid #DDD;
@@ -83,8 +90,7 @@
 
         #mainmenucontent {
             position: relative;
-            /*height: calc(100% - 30px);*/
-            height: 100%;
+            height: calc(100% - 20px);
             overflow-y: auto;
             width: 100%;
         }
@@ -117,7 +123,7 @@
             white-space: nowrap;
         }
 
-        #breadcrums> span.clickable:hover {
+        #breadcrums>span.clickable:hover {
             cursor: pointer;
             text-decoration: underline;
         }
@@ -140,7 +146,7 @@
             margin: 0 1px 0 1px;
         }
 
-        .bar> div {
+        .bar>div {
             margin-right: 5px;
         }
 
@@ -181,7 +187,7 @@
         </div>
 
         <div id="main" class="horizontal layout flex">
-            <div id="mainmenu">
+            <div id="mainmenu" hidden$="{{hideTree}}">
                 <!-- <div id="mainmenubar" class="horizontal layout">
                     <div class="bar horizontal layout flex">
                     </div>
@@ -190,6 +196,11 @@
                 </div> -->
                 <div id="mainmenucontent">
                     <stv-folder-tree tree="{{userData.tree}}" on-treeitemclick="handleTreeItemClick"></stv-folder-tree>
+                </div>
+                <div class="quota-bar horizontal layout center center-justified">
+                    <span class$="{{computeSizeClass(userData)}}">{{computeSize(userData, userData.diskUsage)}}</span>
+                    <span>&nbsp;of&nbsp;</span>
+                    <span>{{computeSize(userData, userData.diskQuota)}}</span>
                 </div>
                 <div class="resizer" id="mainmenuresizer"></div>
             </div>
@@ -201,9 +212,7 @@
 
 
         <div id="botbar" class="horizontal layout center">
-            <div><span class$="{{computeSizeClass(userData)}}">{{computeSize(userData, userData.diskUsage)}}</span> of <span>{{computeSize(userData, userData.diskQuota)}}</span></div>
             <div class="flex"></div>
-
             <content id="customButtons" select=".custom-button"></content>
             <div id="searchBar" class="horizontal layout">
                 <div class="stv-btn stv-btn-shdw file" on-click="handleSearchByType" data-checked$="{{computeSearchByType(searchByType, 'all')}}" data-value="all">All</div>
@@ -330,6 +339,11 @@
                 type: String,
                 value: "all",
                 reflectToAttribute: true
+            },
+            hideTree: {
+                type: Boolean,
+                value: false,
+                reflectToAttribute: true
             }
         },
         userDataChanged: function(neo, old) {
@@ -373,6 +387,7 @@
             var me = this;
             this._parentPanel = stv.utils.closest(this, 'stv-panel');
 
+            me._setInitialSelection();
             if (this._parentPanel != null) {
                 this._parentPanel.addEventListener('hidden', function(e) {
                     if (e.detail == false) {
@@ -426,6 +441,10 @@
                 document.documentElement.removeEventListener('mousemove', doDrag, false);
                 document.documentElement.removeEventListener('mouseup', stopDrag, false);
                 document.body.classList.remove('stv-nosel');
+            }
+
+            if (this.hideTree) {
+                this.$.maincontent.style.width = "100%";
             }
 
             resizer.addEventListener('mousedown', initDrag, false);
@@ -489,6 +508,10 @@
         },
         _setInitialSelection: function() {
             if (this._parentPanel != null && this._parentPanel.hidden === false && this.userData != null) {
+                var folderId = (this.folder) ? this.folder._id : this.userData.home._id
+                this.refreshFolderFiles(folderId);
+            }
+            if (this._parentPanel == null && this.userData != null) {
                 var folderId = (this.folder) ? this.folder._id : this.userData.home._id
                 this.refreshFolderFiles(folderId);
             }
