--- a/src/table/stv-table.html
+++ b/src/table/stv-table.html
@@ -184,9 +184,9 @@
             background-color: #bbb !important;
         }
 
-        div.table-row:last-of-type {
-            border-bottom-width: 0;
-        }
+        /*div.table-row:last-of-type {*/
+            /*border-bottom-width: 0;*/
+        /*}*/
 
         .table-row:nth-child(2n) {
             background-color: #fbfbfb;
