--- a/src/ontology/stv-hpo.html
+++ b/src/ontology/stv-hpo.html
@@ -28,20 +28,20 @@
 
         #allHPO,
         #selectedHPO {
-          width: 95%;
-          min-height: 345px;
-          height: calc(100vh - 450px);
-          border: 1px solid #d3d3d3;
+            width: 95%;
+            min-height: 345px;
+            height: calc(100vh - 450px);
+            border: 1px solid #d3d3d3;
         }
 
         .allHPO {
-          width: 50%;
-          margin-right: 10px;
+            width: 50%;
+            margin-right: 10px;
         }
 
         .selectedHPO {
-          width: 50%;
-          margin-left: 10px;
+            width: 50%;
+            margin-left: 10px;
         }
 
         .titlePreview {
@@ -52,10 +52,6 @@
 
         stv-table {
             font-size: 12px;
-        }
-
-        network-viewer {
-            height: 600px;
         }
 
         .legend {
@@ -71,10 +67,6 @@
             font-size: 15px;
         }
 
-        #network {
-            margin-right: 10px;
-        }
-
         .add-but {
             font-size: 13px;
             font-weight: bold;
@@ -87,25 +79,23 @@
         }
 
         .treeHPO {
-          overflow-y: auto;
-          min-height: 350px;
-          height: calc(100vh - 450px);
-          width: 80%;
-          margin: 10px;
-          padding: 5px;
-          /*border: 1px solid #d3d3d3;*/
+            overflow-y: auto;
+            min-height: 350px;
+            height: calc(100vh - 450px);
+            width: 80%;
+            margin: 10px;
+            padding: 5px;
         }
     </style>
     <template>
         <div class="horizontal layout" style="margin-bottom:5px">
             <div class="stv-btn stv-btn-shdw but" on-click="handleView" data-value="hpo" data-checked$="{{computeView(view, 'hpo')}}"> <i class="fa fa-list"></i>&nbsp; Select HPO </div>
-            <div class="stv-btn stv-btn-shdw but" on-click="createTree" data-value="hierarchy" data-checked$="{{computeView(view, 'hierarchy')}}"> <i class="fa fa-eye"></i>&nbsp; View Hierarchy </div>
-            <!-- <div class="stv-btn stv-btn-shdw but" on-click="ontology" data-value="graph" data-checked$="{{computeView(view, 'graph')}}"><i class="fa fa-sitemap"></i>&nbsp; View Graph </div> -->
+            <div class="stv-btn stv-btn-shdw but" on-click="handleView" data-value="hierarchy" data-checked$="{{computeView(view, 'hierarchy')}}"> <i class="fa fa-eye"></i>&nbsp; View Hierarchy </div>
         </div>
         <div id="hpoList" hidden$="{{!computeView(view, 'hpo')}}">
             <div class="horizontal layout">
                 <div class="allHPO">
-                    <stv-table id="allHPO" class="flex" columns="{{hpoColumns}}" data="{{hpoList}}" enable-select enable-filter enable-paging hide-column-selector page-size="15"></stv-table>
+                    <stv-table id="allHPO" class="flex" columns="{{hpoColumns}}" request="{{request}}" enable-remote enable-select enable-filter enable-paging hide-column-selector page-size="15"></stv-table>
                     <div class="stv-btn stv-btn-shdw but" on-click="handleAddHPO"><i class="fa fa-plus-square-o"></i>&nbsp; Add
                     </div>
                 </div>
@@ -136,14 +126,6 @@
                 </div>
             </div>
         </div>
-        <div class="vertical layout" hidden$="{{!computeView(view, 'graph')}}">
-            <network-viewer id="network" hide-node-render hide-edge-render lite></network-viewer>
-            <div class="legend">
-                <strong>Colors Info: </strong>
-                <div class="horizontal layout" style="padding:2px">
-                    <div>is_a &nbsp;<i class="fa fa-long-arrow-right" aria-hidden="true" style="color:#0033cc"></i></div>
-                </div>
-            </div>
     </template>
 
     <script>
@@ -154,11 +136,10 @@
                     type: String,
                     value: 'hpo'
                 },
-                hpoList: {
-                    type: Array,
-                    value: function() {
-                        return []
-                    }
+                url: {
+                    type: String,
+                    value: "",
+                    observer: 'urlChanged'
                 },
                 selectedHPO: {
                     type: Array,
@@ -184,16 +165,18 @@
                     value: function() {
                         return {};
                     }
-                }
+                },
+                request: {
+                    type: Object
+                },
+                numTotalResults: {
+                    type: Number,
+                    notify: true
+                },
             },
             ready: function() {
                 var me = this;
-                this.set('hpoList', HPO_ONTOLOGY);
-                for (var i = 0; i < this.hpoList.length; i++) {
-                    this.hpoList[i].id = 'HP:' + this.hpoList[i].id;
-                }
-
-                // this.createJson();
+                this.getHPO();
 
                 this.hpoColumns = [{
                     name: 'id',
@@ -201,7 +184,7 @@
                     type: 'text',
                     width: 120
                 }, {
-                    name: 'n',
+                    name: 'name',
                     title: 'Name',
                     type: 'text',
                     width: 280
@@ -212,7 +195,7 @@
                     type: 'text',
                     width: 120
                 }, {
-                    name: 'n',
+                    name: 'name',
                     title: 'Name',
                     type: 'text',
                     width: 230
@@ -233,7 +216,7 @@
                 for (var i = 0; i < this.$.allHPO.selected.length; i++) {
                     var hpo = this.$.allHPO.selected[i];
                     if (this.mapSelectedHpo[hpo.id] == null) {
-                        this.mapSelectedHpo[hpo.id] = hpo;
+                        this.mapSelectedHpo[hpo.id] = true;
                         this.push('selectedHPO', hpo);
                     }
                 }
@@ -243,142 +226,67 @@
                 this.mapSelectedHpo = {};
             },
             handleAddSelected: function(e) {
-              var hpos=[];
-              this.hpoValue=[];
-              var els = this.$.treeHPO.querySelectorAll('stv-ontology-tree-item[selected]');
-              if (els.length > 0) {
-                for (var i = 0; i < els.length; i++) {
-                    if (this.mapSelectedHpo[els[i].file.id] == null) {
-                        this.mapSelectedHpo[els[i].file.id] = els[i].file;
-                        hpos.push(els[i].file);
+                var hpos = [];
+                this.hpoValue = [];
+                var els = this.$.treeHPO.querySelectorAll('stv-ontology-tree-item[selected]');
+                if (els.length > 0) {
+                    for (var i = 0; i < els.length; i++) {
+                        if (this.mapSelectedHpo[els[i].file.id] == null) {
+                            this.mapSelectedHpo[els[i].file.id] = true;
+                            hpos.push(els[i].file);
+                        }
                     }
+                    this.set('hpoValue', hpos);
+                } else {
+                    this.set('hpoValue', this.selectedHPO);
                 }
-                  this.set('hpoValue', hpos);
-              } else {
-                  this.set('hpoValue', this.selectedHPO);
-              }
                 this.fire('added');
             },
-            createTree: function(e) {
-                // var auxHP = [];
-                // var aux = HPO_ONTOLOGY;
-                // for (var i = 0; i < aux.length; i++) {
-                //     if (aux[i].f == null) {
-                //         aux[i].f = [];
-                //     }
-                //     if (aux[i].s == null) {
-                //         continue;
-                //     } else {
-                //         var son = aux[i].s;
-                //         for (var k = 0; k < son.length; k++) {
-                //             var id = son[k];
-                //             for (var j = 0; j < HPO_ONTOLOGY.length; j++) {
-                //                 if (HPO_ONTOLOGY[j].id == id) {
-                //                     if (HPO_ONTOLOGY[j].f == null) {
-                //                         HPO_ONTOLOGY[j].f = [];
-                //                     }
-                //                     delete aux[i].s;
-                //                     HPO_ONTOLOGY[j].f.push(aux[i]);
-                //                 }
-                //             }
-                //         }
-                //     }
-                //
-                // }
-                //
-                // auxHP.push(HPO_ONTOLOGY[0]);
-                // debugger
-                // var tree = "HPO_TREE=" + JSON.stringify(auxHP);
-                // var blob = new Blob([tree], {
-                //     type: "text/plain;charset=utf-8"
-                // });
-                // saveAs(blob, 'hpo_tree.js');
-
-                HPO_TREE[0].open = true;
-                this.$.treeHPO.set('tree', HPO_TREE);
-                this.handleView(e);
-            },
-            // createJson: function(content) {
-            createJson: function() {
+            getHPO: function() {
                 var me = this;
-                openRemoteFile("/projects/bierapp/conf/hp_obo.sif", function(content) {
-                    var lines = content.split("\n");
-                    for (var i = 0; i < lines.length; i++) {
-                        var line = lines[i];
-                        var fields = line.split(" ");
-                        if (me.map[fields[2]] == null) {
-                            me.map[fields[2]] = {};
-                        }
-                        me.map[fields[2]][fields[0]] = me.map[fields[0]];
+                var url = BiodbManager.hpo.fetch({
+                    request: {
+                        url: true
                     }
                 });
-                // var lines = content.split("\n");
-                // for (var i = 0; i < lines.length; i++) {
-                //     var line = lines[i];
-                //     var fields = line.split(" ");
-                //     if (this.map[fields[0]] == null) {
-                //         this.map[fields[0]] = {};
-                //     }
-                //     for (var j = 2; j < fields.length; j++) {
-                //         if (this.map[fields[j]] == null) {
-                //             this.map[fields[j]] = {};
-                //         }
-                //         this.map[fields[0]][fields[j]] = this.map[fields[j]];
-                //     }
-                // }
+                this.url = url;
+                console.log(url);
             },
-            ontology: function(e) {
+
+            urlChanged: function(neo, old) {
                 var me = this;
-                openRemoteFile("/projects/bierapp/conf/hp_obo.sif", function(content) {
-                    me.createJson(content);
-                    me.handleView(e);
-                });
-                var newFile = "";
-                var hpo = this.selectedHPO;
-                var ids = [];
-                for (var i = 0; i < hpo.length; i++) {
-                    ids.push(hpo[i].id);
+                if (neo == null || neo == "") {
+                    return;
                 }
-                openRemoteFile("/projects/bierapp/conf/hp_obo.sif", function(content) {
-                    if (Object.keys(me.map).length == 0) {
-                        me.createJson(content);
-                    }
-                    for (var i = 0; i < ids.length; i++) {
-                        var keys = Object.keys(me.map[ids[i]]);
-                        if (keys.length > 0) {
-                            for (var j = 0; j < keys.length; j++) {
-                                ids.push(keys[j]);
-                            }
-                        }
-                    }
-                    var lines = content.split("\n");
-                    for (var i = 0; i < lines.length; i++) {
-                        var line = lines[i];
-                        for (var j = 0; j < ids.length; j++) {
-                            var id = ids[j];
-                            if (line.indexOf(id) == 0) {
-                                newFile += '\n' + line;
-                            }
-                        }
-                    }
+                this.request = {
+                    url: this.url,
+                    parse: function(response) {
+                        return me._parse(response);
+                    },
+                    parseTotal: function(response) {
+                        var total = me._parseTotal(response);
 
-                    me.handleView(e);
-                    me.$.network.startOver();
-                    me.$.network.loadSif(newFile);
-                    me.$.network.setLayout('Force directed');
-                    me.$.network.$.edgeRender.applyVisualSet({
-                        attribute: 'relation',
-                        displayProperty: 'color',
-                        enabled: true,
-                        parse: 'string',
-                        type: 'categorical',
-                        matches: {
-                            'is_a': '#0033cc'
-                        }
-                    })
-                });
-
-            }
-        })
+                        me.set('numTotalResults', total);
+                        return total;
+                    },
+                };
+            },
+            _parse: function(response) {
+                var me = this;
+                if (response.result != null) {
+                    data = response.result;
+                } else {
+                    data = [];
+                }
+                return data;
+            },
+            _parseTotal: function(response) {
+                var total = 0;
+                if (response.result != null) {
+                    total = response.numTotalResults;
+                }
+                return total;
+            },
+        });
     </script>
 </dom-module>
