--- a/src/ontology/stv-ontology-tree-item.html
+++ b/src/ontology/stv-ontology-tree-item.html
@@ -74,8 +74,8 @@
     </style>
     <template>
         <div class="main horizontal layout stv-nosel">
-            <div class="arrow" empty$="{{isEmpty(file.f)}}" open$="{{file.open}}" on-click="toggleOpen"></div>
-            <div id="name" class$="{{computeClass(file.f,file.open)}}" on-click="handleClick" on-dblclick="toggleOpen">{{computeName(file.n)}}</div>
+            <div class="arrow" empty$="{{isEmpty(file.children)}}" open$="{{file.open}}" on-click="toggleOpen"></div>
+            <div id="name" class$="{{computeClass(file.children,file.open)}}" on-click="handleClick" on-dblclick="toggleOpen">{{computeName(file.name)}}</div>
         </div>
         <div style="margin-left:7px;" hidden$="{{!file.open}}">
             <template is="dom-repeat" items="{{auxItems}}" as="f">
@@ -108,10 +108,10 @@
             },
             checkFiles: function() {
                 if (this.file.open == true) {
-                    if (this.file.f == null) {
+                    if (this.file.children == null) {
                         this.set('auxItems', []);
                     } else {
-                        this.set('auxItems', this.file.f);
+                        this.set('auxItems', this.file.children);
                     }
                 } else {
                     this.set('auxItems', []);
@@ -130,7 +130,7 @@
                 this.selected=!this.selected;
             },
             toggleOpen: function(e) {
-                if (this.file.f.length > 0) {
+                if (this.file.children.length > 0) {
                     this.set('file.open', !this.file.open);
                 }
                 this.checkFiles();
