--- a/src/stv-form-box.html
+++ b/src/stv-form-box.html
@@ -2,7 +2,7 @@
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
 <dom-module id="stv-form-box">
     <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
-        :host {
+         :host {
             display: inline-block;
             position: relative;
             box-sizing: border-box;
@@ -38,14 +38,28 @@
             cursor: pointer;
         }
 
-        .collapsible > i {
+        .collapsible>i {
             color: var(--secondary-text-color);
             font-size: 12px;
         }
 
-        .collapsible >i:hover {
+        .collapsible>i:hover {
             font-weight: bold;
             color: var(--dark-button-color);
+        }
+
+        ul.error {
+            background-color: #fcf8f2;
+            border: 1px solid red;
+            border-left: 4px solid red;
+            margin-left: 20px;
+            margin-right: 20px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+
+        ul.error>li {
+            padding: 3px;
         }
     </style>
     <template>
@@ -61,9 +75,14 @@
             <div id="container" class="horizontal layout" hidden$="{{isContainerHidden(collapsible, collapsed)}}">
                 <content select=".container"></content>
             </div>
+
+            <!-- <ul id="error" class="error"> -->
+            <ul id="error" class="error" hidden$="{{hideErrors}}">
+                <template is="dom-repeat" items="{{errors}}">
+                    <li>{{item.msg}}</li>
+                </template>
+            </ul>
         </div>
-
-
     </template>
 
     <script>
@@ -80,8 +99,24 @@
                     reflectToAttribute: true,
                     value: false,
                 },
+                errors: {
+                    type: Array,
+                    value: function() {
+                        return [];
+                    }
+                },
+                hideErrors: {
+                    type: Boolean,
+                    value: true
+
+                }
             },
-            ready: function() {},
+            observers: [
+                "computeErrors(errors.splices)"
+            ],
+            ready: function() {
+
+            },
 
             handleCollapseAction: function(e) {
                 if (this.collapsible) {
@@ -107,8 +142,21 @@
                 } else {
                     return "Minimize";
                 }
+            },
+            addError: function(msg) {
+                console.log("ADD ERROR");
+                this.push('errors', {
+                    msg: msg
+                });
+                console.log("ADD ERROR: " + this.errors.length)
+            },
+            clearErrors: function() {
+                this.set('errors', []);
+            },
+            computeErrors: function(errors) {
+                    this.hideErrors = errors && errors.length == 0;
+                
             }
-
         })
     </script>
 </dom-module>
